hphp/test/slow/intmap_array/miarray_parse_error.php.expectf
Fatal error: syntax error, unexpected ',' in %s/miarray_parse_error.php on line 4